--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,25 @@ body {
     background-color: #F3F1FF;
 }
 
+
+/* Reuse Code start */
+.container {
+    width: 870px;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 7px;
+}
+
+/* Reuse Code end */
+
+
 header {
     display: flex;
     justify-content: center;
     background-color: #562EFF;
 }
 
-.nav {}
+
 
 .navbar {
     width: 870px;
@@ -73,11 +85,6 @@ main {
 
 }
 
-.container {
-    width: 870px;
-    background-color: #fff;
-    padding: 30px;
-}
 
 .player-heading {
     color: #562EFF;
@@ -142,4 +149,21 @@ hr {
 
 .blog-text p span {
     color: #9F9F9F;
+}
+
+/* COURSE SECTION  */
+
+.course {
+    display: flex;
+    justify-content: center;
+    margin-top: 35px;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.course-item img {
+    width: 224px;
+    height: 104px;
 }
