--- a/css/style.css
+++ b/css/style.css
@@ -159,11 +159,63 @@ hr {
     margin-top: 35px;
 }
 
+.course-item {
+    margin-right: 15px;
+    box-shadow: 2px 2px 5px;
+    border-radius: 10px;
+    padding: 15px;
+}
+
 .d-flex {
     display: flex;
+    justify-content: center;
 }
 
 .course-item img {
     width: 224px;
     height: 104px;
+}
+
+.course-text h2 {
+    font-size: 18px;
+    color: #1E1E1E;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.course-text p {
+    color: #ED6B4F;
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.course-rating {
+    display: flex;
+    /* justify-content: center; */
+}
+
+.clock {
+    background-color: #FFE4E8;
+    color: #FF4A60;
+    border-radius: 10px;
+
+}
+
+.clock img {
+    width: 21px;
+    height: 21px;
+    margin-top: 2px;
+}
+
+.course-icon {
+    margin-right: 10px;
+}
+
+.course-icon i {
+    color: #FFC014;
+    font-size: 14px;
+}
+
+.rate {
+    margin-right: 5px;
 }
