--- a/css/style.css
+++ b/css/style.css
@@ -157,13 +157,16 @@ hr {
     display: flex;
     justify-content: center;
     margin-top: 35px;
+
 }
 
 .course-item {
-    margin-right: 15px;
-    box-shadow: 2px 2px 5px;
+    padding: 20px;
+    margin-left: 8px;
+    margin-right: 8px;
     border-radius: 10px;
-    padding: 15px;
+    box-shadow: 5px 5px 50px 1px rgba(0, 0, 0, 0.2);
+
 }
 
 .d-flex {
@@ -191,13 +194,14 @@ hr {
 
 .course-rating {
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
 }
 
 .clock {
     background-color: #FFE4E8;
     color: #FF4A60;
     border-radius: 10px;
+    padding: 0 5px;
 
 }
 
