media queary added

--- a/css/style.css
+++ b/css/style.css
@@ -259,8 +259,8 @@ hr {
 
 @media screen and (max-width: 480px) {
 
-    /*------ media Query in Menu bar-------*/
 
+    /*------ media Query in Menu bar-------*/
     .navbar {
         width: 100%;
         display: flex;
@@ -288,16 +288,12 @@ hr {
 
     /*---------Main section-------*/
     main {
-
         margin-top: 0px;
     }
 
     .container {
         width: 100%;
-        background-color: #fff;
         padding: 60px 30px;
-        border-radius: 7px;
-        text-align: center;
     }
 
     .players {
@@ -328,11 +324,65 @@ hr {
         margin-bottom: 25px;
     }
 
+    .course-item img {
+        width: 100%;
+    }
+
     .footer-content h2 {
         font-size: 22px;
     }
 
     .footer-content p {
         font-size: 16px;
+    }
+}
+
+/* tab device medie quary  */
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .navbar {
+        width: 100%;
+    }
+
+    header {
+        background-color: #562EFF;
+        display: block;
+        padding: 0 10%;
+    }
+
+    /* main secton  */
+
+    main {
+        margin-top: 0px;
+    }
+
+    .blog-item {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .blog-text {
+        margin-top: 15px;
+    }
+
+    .d-flex {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 25px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 869px) {
+    .navbar {
+        width: 100%;
+    }
+
+    header {
+        display: block;
+        padding: 0 10%;
+    }
+
+    main {
+        margin-top: 0px;
     }
 }
